--- a/src/app/authentication/body/body.component.html
+++ b/src/app/authentication/body/body.component.html
@@ -1,5 +1,6 @@
 <div id="body">
 <div class="container">
+  <br><br>
     <div class="row">
       <div class="col-sm-4">
         <br><br>
@@ -95,28 +96,34 @@
     </div>
     <div class="container mt-5">
       <div class="row">
-        
-        <div class="col-sm-5">
+        <div class="col-xl-7 col-lg-8 col-sm-12">
           <div class="container1">
             <div class="box">
               <img src="../../../assets/pexels-karolina-grabowska-4210341.jpg" height="275px" width="220px">
             </div>
-            <div class="container2">
-              <div class="box overlay">
-                <img src="../../../assets/pexels-karolina-grabowska-4210372.jpg" height="200px" width="250px">
-              </div>
-              <div class="box1">
-                <img src="../../../assets/pexels-karolina-grabowska-4210371.jpg" height="275px" width="220px">
-              </div>
-              <div class="box overlay1">
-                <img src="../../../assets/pexels-karolina-grabowska-4210373.jpg" height="200px" width="250px">
-              </div>
+            <div class="box overlay">
+              <img src="../../../assets/pexels-karolina-grabowska-4210372.jpg" height="200px" width="250px">
+            </div>
+            <div class="box1" id="bigScreen">
+              <img src="../../../assets/pexels-karolina-grabowska-4210371.jpg" height="275px" width="220px">
+            </div>
+            <div class="box overlay1" id="bigScreen">
+              <img src="../../../assets/pexels-karolina-grabowska-4210373.jpg" height="200px" width="250px">
             </div>
           </div>
         </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-4">
-          <br><br>
+        <div class="col-xl-7 col-lg-8 col-sm-12" id="smallScreen">
+          <div class="container1">
+            <div class="box">
+              <img src="../../../assets/pexels-karolina-grabowska-4210371.jpg" height="275px" width="220px">
+            </div>
+            <div class="box overlay">
+              <img src="../../../assets/pexels-karolina-grabowska-4210373.jpg" height="200px" width="250px">
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-5 col-lg-4 col-sm-12" style="margin-left: auto; margin-right: auto;">
+          <br><br><br><br>
           <h2>Specialization of our work</h2>
           <ul style="font-size: 20px;">
             <li>
@@ -124,9 +131,6 @@
             <li>100% Natural ingridents are used</li>
             <li>Delivery On Time</li>
           </ul>
-        </div>
-        <div class="col-sm-1">
-
         </div>
       </div>
     </div>
