--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -17,7 +17,7 @@
               formControlName="password">
             <p id="validation1"></p>
             <div class="text-center">
-              <button class="btn btn-primary" type="submit" class="btn btn-dark">login</button><br>
+              <button class="btn btn-primary" type="submit" class="btn btn-dark">Login</button><br>
             </div>
             <div class="text-center">
               <a routerLink="/signup" style="color: black;">Need an account?
