--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -7,7 +7,7 @@
                 <form class="signup_form" role="form" [formGroup]="signup" (ngSubmit)="signupuserdata(signup.value)"
                     class="inputUsersForm">
                     <div id="box">
-                        <h1 class="display-6">sign up</h1>
+                        <h1 class="display-6">Sign up</h1>
                         <label>Name</label>
                         <input type="text" class="form-control" id="username" placeholder="Enter name" name="name"
                             formControlName="username" required>
@@ -22,7 +22,7 @@
                         <p id="validation2"></p>
                         <div class="text-center">
                             <button type="button" class="btn btn-primary" type="submit"
-                                class="btn btn-dark">join</button>
+                                class="btn btn-dark">Join with us</button>
                         </div>
                         <div class="text-center">
                             <a routerLink="/login" style="color: rgb(1, 1, 15);">Already a user?
