--- a/src/app/navigationbar/header/header.component.html
+++ b/src/app/navigationbar/header/header.component.html
@@ -1,29 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+<nav class="navbar navbar-expand-lg navbar ">
     <div class="container-fluid">
         <a href="#" class="navbar-brand" style="font-size: 20px">
             <h2 style="font-size: 30px;">The Laundry Basket <i class="fa fa-shopping-basket"
                     style="font-size:30px;"></i></h2>
         </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
+        <button class="navbar-toggler btn btn-outline" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"  aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto" *ngIf="!username">
-                    <a routerLink="/login" class="nav-item nav-link active"
-                    style="font-size: 20px ;">LOGIN</a>
-                <a routerLink="/signup" class="nav-item nav-link active"
-                    style="font-size: 20px ;">SIGNUP</a>
-                        
-            </div>
-            <div class="navbar-nav ms-auto" *ngIf="username">
-                <a routerLink="/order" class="nav-item nav-link active"
-                style="font-size: 20px ;">{{username}}</a>
-                <a routerLink="/order" class="nav-item nav-link active"
-                style="font-size: 20px ;">ORDER</a>
-                <a (click)="logout()" class="nav-item nav-link active"
-                style="font-size: 20px ;">Logout</a>     
-           </div>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02" [ngbCollapse]="isCollapsed">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item active" >
+                  <a class="nav-link"  routerLink="/login" *ngIf="!username">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/signup" *ngIf="!username">Signup</a>
+                </li>
+                <li class="nav-item" >
+                  <a class="nav-link disabled" *ngIf="username">{{username}}</a>
+                </li>
+                <li class="nav-item" >
+                    <a href="" (click)="logout()" *ngIf="username"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                </li>
+              </ul>
+           
         </div>
         </div>
 </nav>
+
