--- a/src/app/authentication/body/body.component.css
+++ b/src/app/authentication/body/body.component.css
@@ -198,3 +198,10 @@ background: #0057e3;
       margin-top: -170px;
     }
   }
+
+  @media only screen and (max-width: 600px) {
+    #body2 {
+      height: 900px;
+    }
+    
+  }
