--- a/src/app/navigationbar/header/header.component.html
+++ b/src/app/navigationbar/header/header.component.html
@@ -18,8 +18,11 @@
                 <li class="nav-item" >
                   <a class="nav-link disabled" *ngIf="username">{{username}}</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/order" *ngIf="username">Order</a>
+                </li>
                 <li class="nav-item" >
-                    <a href="" (click)="logout()" *ngIf="username"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                    <a  class="nav-link"(click)="logout()" *ngIf="username"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
                 </li>
               </ul>
            
