--- a/src/app/navigationbar/header/header.component.html
+++ b/src/app/navigationbar/header/header.component.html
@@ -22,7 +22,8 @@
                   <a class="nav-link" routerLink="/order" *ngIf="username">Order</a>
                 </li>
                 <li class="nav-item" >
-                    <a  class="nav-link"(click)="logout()" *ngIf="username"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
+                    <a  class="nav-link"(click)="logout()" *ngIf="username"><i class="fa fa-power-off" style="font-size:24px"></i>
+                   Logout</a>
                 </li>
               </ul>
            
