--- a/src/app/navigationbar/footer/footer.component.html
+++ b/src/app/navigationbar/footer/footer.component.html
@@ -8,15 +8,15 @@
         <div class="col-sm-2"></div>
 
         <div class="col-sm-1"><br><br>
-            <a href="https://www.instagram.com/_kaviarasan_/"><i class="fa fa-instagram"
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"
                     style="font-size:36px"></i></a>
         </div>
         <div class="col-sm-1"><br><br>
-            <a href="https://www.instagram.com/_kaviarasan_/"> <i class="fa fa-facebook-f"
+            <a href="https://www.facebook.com/"> <i class="fa fa-facebook-f"
                     style="font-size:36px"></i></a>
         </div>
         <div class="col-sm-1"><br><br>
-            <a href="https://www.instagram.com/_kaviarasan_/"><i class="fa fa-linkedin" style="font-size:36px">
+            <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" style="font-size:36px">
                 </i></a>
         </div>
     </div>
