--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,6 +1,15 @@
 <div id="body">
-  <br>
   <div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-8"></div>
+        <div class="col-sm-4">
+    <img src="../../../assets/03-42-11-849_512.webp" height="275px" width="220px" style="margin-left: 50%;margin-right: 50%;margin-top: 50%;" alt="er" *ngIf="showGif">
+ 
+</div>
+</div>
+</div> 
+  <br>
+  <div class="container mt-5" *ngIf="loginCard">
     <div class="row">
       <div class="col-sm-8"></div>
       <div class="col-sm-4"><br><br>
@@ -27,4 +36,20 @@
           <br><br><br>
         </form>
       </div>
+      </div>
+      </div>
+      </div>
+      <div class="container mt-5 margins" >
+        <div class="row" *ngIf="loginFailed">
+            <div class="col-sm-8"></div>
+            <div class="col-sm-4"><br><br>
+                <div id="box">
+                    <h1 class="display-6">Signup Failed</h1>
+                    <p id="thappu">
+                        <a routerLink="/signup">Try once again to signup</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
       <router-outlet></router-outlet>
