--- a/src/app/authentication/signup/signup.component.css
+++ b/src/app/authentication/signup/signup.component.css
@@ -5,10 +5,10 @@
     background-size: 100% 100%; 
     min-height: 100vh;
     margin-top: -120px;
+    padding-top: 80px;
+   
   }
-
   
-
   a:visited {
     text-decoration: none;
   }
@@ -24,8 +24,11 @@
   h1 {
     text-align: center;
   }
+  img{
+    image-orientation: center;
+  }
 
-  .margin {
+  .margins {
     margin: 30% 5% 5% 5%;
   }
 
@@ -56,4 +59,9 @@
     text-align: center;
     color: white  !important;
     font-size: larger;
+  }
+  @media only screen and (max-width: 992px) {
+    #body {
+      margin-top: -170px;
+    }
   }
