--- a/src/app/authentication/invoice/invoice.component.html
+++ b/src/app/authentication/invoice/invoice.component.html
@@ -28,38 +28,38 @@
                 <thead>
                     <tr>
                         <th>Description</th>
-                        <th>Amount</th>
+                        <th>Items</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="col-md-9"> No of shirts</td>
-                        <td class="col-md-3"><i class="fa fa-inr"></i><p id="shirts">{{orderDetails.NoOfShirts}}</p>
+                        <td class="col-md-3"><p id="shirts">{{orderDetails.NoOfShirts}}</p>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-9">No of pants</td>
-                        <td class="col-md-3"><i class="fa fa-inr"></i><p id = "pants">{{orderDetails.NoOfPants}}</p></td>
+                        <td class="col-md-3"><p id = "pants">{{orderDetails.NoOfPants}}</p></td>
                     </tr>
                     <tr>
                         <td class="col-md-9">No of ladiestop</td>
-                        <td class="col-md-3"><i class="fa fa-inr"></i><p id ="ladiestop">{{orderDetails.NoOfLadiesTop}}</p></td>
+                        <td class="col-md-3"><p id ="ladiestop">{{orderDetails.NoOfLadiesTop}}</p></td>
                     </tr>
                     <tr>
                       <td class="col-md-9">No of blouse</td>
-                      <td class="col-md-3"><i class="fa fa-inr"></i><p id="blouse">{{orderDetails.NoOfBlouse}}</p></td>
+                      <td class="col-md-3"><p id="blouse">{{orderDetails.NoOfBlouse}}</p></td>
                   </tr>
                   <tr>
                     <td class="col-md-9">No of dhoti</td>
-                    <td class="col-md-3"><i class="fa fa-inr"></i><p id="dhoti">{{orderDetails.NoOfDhoti}}</p></td>
+                    <td class="col-md-3"><p id="dhoti">{{orderDetails.NoOfDhoti}}</p></td>
                 </tr>
                 <tr>
                   <td class="col-md-9">No of saree</td>
-                  <td class="col-md-3"><i class="fa fa-inr"></i><p id="saree">{{orderDetails.NoOfSaree}}</p></td>
+                  <td class="col-md-3"><p id="saree">{{orderDetails.NoOfSaree}}</p></td>
               </tr>
               <tr>
                 <td class="col-md-9">No of shaul</td>
-                <td class="col-md-3"><i class="fa fa-inr"></i><p id="shaul">{{orderDetails.NoOfShaul}}</p></td>
+                <td class="col-md-3"><p id="shaul">{{orderDetails.NoOfShaul}}</p></td>
             </tr>
                     <tr>
                         <td class="text-right">
