--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -33,9 +33,7 @@
                 <span style="color: rgb(41, 41, 199);">Signup</span> </a>
             </div>
           </div>
-          <br><br><br>
         </form>
-      </div>
       </div>
       </div>
       </div>
@@ -44,12 +42,22 @@
             <div class="col-sm-8"></div>
             <div class="col-sm-4"><br><br>
                 <div id="box">
-                    <h1 class="display-6">Signup Failed</h1>
+                    <h1 class="display-6">Login Failed</h1>
                     <p id="thappu">
-                        <a routerLink="/signup">Try once again to signup</a>
+                        <a routerLink="/login">Try once again to login</a>
                     </p>
                 </div>
             </div>
         </div>
         </div>
+
+
+
+
+
+
+
+       </div>
+      
+       
       <router-outlet></router-outlet>
