--- a/src/app/navigationbar/footer/footer.component.html
+++ b/src/app/navigationbar/footer/footer.component.html
@@ -29,7 +29,7 @@
             @2023 The Laundry Basket</div>
         <div class="col-sm-4"></div>
         <div class="col-sm-1">About us</div>
-        <div class="col-sm-1">privacy</div>
+        <div class="col-sm-1">Privacy</div>
         <div class="col-sm-3">thelaundrybasket2023@gmail.com</div>
     </div>
 </div>
