--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -26,7 +26,7 @@
               formControlName="password">
             <p id="validation1"></p>
             <div class="text-center">
-              <button class="btn btn-primary" type="submit" class="btn btn-dark">Login</button><br>
+              <button class="btn btn-primary" type="submit" class="btn btn-dark" [disabled]="!login.valid">Login</button><br>
             </div>
             <div class="text-center">
               <a routerLink="/signup" style="color: black;">Need an account?
@@ -44,7 +44,7 @@
                 <div id="box">
                     <h1 class="display-6">Login Failed</h1>
                     <p id="thappu">
-                        <a routerLink="/login">Try once again to login</a>
+                        <a class="nav-link"(click)="refreshLogin()">Try once again to login</a>
                     </p>
                 </div>
             </div>
