--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -22,9 +22,9 @@
                         <input type="text" class="form-control" id="username" placeholder="Enter name" name="name"
                             formControlName="username" required>
                         <p id="validation"></p>
-                        <label>Email id</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email"
-                            formControlName="email" required>
+                        <label>Mobile number</label>
+                        <input type="mobileNumber" class="form-control" id="mobileNumber" placeholder="Enter mobile number" name="mobileNumber"
+                            formControlName="mobileNumber" required>
                         <p id="validation1"></p>
                         <label>Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Enter password"
