--- a/src/app/navigationbar/header/header.component.html
+++ b/src/app/navigationbar/header/header.component.html
@@ -21,6 +21,9 @@
                   <a class="nav-link" routerLink="/" *ngIf="username">HOME</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" routerLink="/partners" *ngIf="username">WANNA BE A PARTNER</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" routerLink="/order" *ngIf="username">ORDER</a>
                 </li>
                 <li class="nav-item" >
