--- a/src/app/navigationbar/footer/footer.component.html
+++ b/src/app/navigationbar/footer/footer.component.html
@@ -26,11 +26,11 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3">
-            @2023 The Laundry Basket</div>
+            &#64;2023 The Laundry Basket</div>
         <div class="col-sm-4"></div>
         <div class="col-sm-1">About us</div>
         <div class="col-sm-1">Privacy</div>
-        <div class="col-sm-3">thelaundrybasket2023@gmail.com</div>
+        <div class="col-sm-3">thelaundrybasket2023&#64;gmail.com</div>
     </div>
 </div>
 </div>
