--- a/src/app/authentication/collecting-partner-detail/collecting-partner-detail.component.css
+++ b/src/app/authentication/collecting-partner-detail/collecting-partner-detail.component.css
@@ -1,1 +1,115 @@
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
 
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .stepper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+  }
+
+  .step {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+
+  .step.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  .line {
+    width: 2px;
+    height: 20px;
+    background-color: #ddd;
+    margin-bottom: 20px;
+  }
+
+  .step-content {
+    display: none;
+    margin-bottom: 20px;
+  }
+
+  .step-content.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .step-content.active input {
+    margin-top: 10px;
+    padding: 15px; /* Adjust the padding as needed */
+    width: 300px; /* Adjust the width as needed */
+  }
+  
+  /* Add this to your existing CSS styles */
+.input-container {
+    position: relative;
+}
+
+.input-container input {
+    padding-right: 30px;
+    border-color: #ddd; /* Adjust as needed to make room for the link */
+}
+
+.input-container a.button-link {
+    position: absolute;
+    top: 50%;
+    right: 8px; /* Adjust as needed */
+    transform: translateY(-40%);
+    text-decoration: none;
+    z-index: 2; /* Ensure the link appears above the input text */
+    color: #007BFF; /* Adjust link color as needed */
+}
+
+.input-container button {
+    margin-left: 10px; /* Adjust the margin as needed */
+}
+  #box {
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+    padding: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .display-6{
+    text-align: center;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+  h1,a {
+    text-align: center;
+  }
+  #button{
+     
+        width: 100%; /* Adjust the width as needed */
+        padding: 10px; /* Optional: Adjust padding for better visual appearance */
+    
+  }
